[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet/ShotgunBullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/weapons/shotgun_bullet.png" type="Texture" id=2]

[sub_resource type="Curve" id=2]
min_value = -1.0
_data = [ Vector2( 0, -0.0386363 ), 0.0, 0.0, 0, 0, Vector2( 0.183168, 0.143182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="ShotgunBullet" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 80
speed_scale = 1.94
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
angular_velocity = 290.64
radial_accel = 18.35
scale_amount = 2.0
color = Color( 0.992157, 0.286275, 0.286275, 1 )
hue_variation = 0.07
hue_variation_random = 0.44
hue_variation_curve = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="life" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="life" to="." method="_on_life_timeout"]
